# elm

./: .bazelignore  .gitignore  ETHICS  MODULE.bazel  README.md  TODO.md  WORKSPACE  deploy.sh
client/: BUILD  client.c  libmaildir.c  libmaildir.h
core/: BUILD.bazel  __init__.py  email_parser.py  email_parser_test.py  email_parser_test.sh
data/: BUILD.bazel
docs/: dpkg-implementation-plan.md  exim4-setup.md  feature_spf.md  quick-reference.md  serving-implementation-plan.md  training-pipeline-implementation-plan.md  training.md
ingest/: BUILD.bazel  fetch.sh
ingest/src/main/java/ch/execve/elm/ingest/: EmailParser.java  EmailRecord.java  IngestPipeline.java
ingest/src/test/java/ch/execve/elm/ingest/: EmailParserTest.java
java/ch/execve/elm/core/: BUILD.bazel  EmailParser.java  EmailRecord.java
java/ch/execve/elm/ingest/: BUILD.bazel  IngestPipeline.java
java/ch/execve/elm/serving/: BUILD.bazel  ElmServer.java
javatests/ch/execve/elm/ingest/: BUILD.bazel  EmailParserTest.java
pkg/: BUILD  elm-server.service  postinst  prerm
serving/: BUILD.bazel  predict.py  requirements.txt  run_python.sh  server.py
training/: BUILD.bazel  export_onnx.py  fetch.cfg.example  fetch.sh  ingest.py  predict.py  requirements.txt  run_python.sh  train.py
