module(
    name = "elm",
    version = "1.0.0",
)

bazel_dep(name = "rules_java", version = "9.1.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_shell", version = "0.6.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "jakarta.mail:jakarta.mail-api:2.1.3",
        "org.eclipse.angus:angus-mail:2.0.3",
        "org.jsoup:jsoup:1.17.2",
        "com.fasterxml.jackson.core:jackson-databind:2.17.1",
        "com.fasterxml.jackson.core:jackson-core:2.17.1",
        "com.fasterxml.jackson.core:jackson-annotations:2.17.1",
        "info.picocli:picocli:4.7.6",
        "com.google.guava:guava:32.0.1-jre",
        "junit:junit:4.13.2",
    ],
)

use_repo(maven, "maven")
