# Copyright 2026 Paweł Zuzelski
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "elm",
    version = "1.0.0",
)

bazel_dep(name = "rules_java", version = "9.1.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_pkg", version = "1.0.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "jakarta.mail:jakarta.mail-api:2.1.3",
        "org.eclipse.angus:angus-mail:2.0.3",
        "org.jsoup:jsoup:1.17.2",
        "com.fasterxml.jackson.core:jackson-databind:2.17.1",
        "com.fasterxml.jackson.core:jackson-core:2.17.1",
        "com.fasterxml.jackson.core:jackson-annotations:2.17.1",
        "info.picocli:picocli:4.7.6",
        "com.google.guava:guava:32.0.1-jre",
        "junit:junit:4.13.2",
    ],
)

use_repo(maven, "maven")
