# Copyright 2026 Paweł Zuzelski
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "__init__.py",
    "email_parser.py",
    "email_parser_test.py",
    "email_parser_test.sh",
])

sh_test(
    name = "email_parser_test",
    srcs = ["email_parser_test.sh"],
    data = [
        "email_parser.py",
        "email_parser_test.py",
    ],
    tags = ["local"],
)

