# Copyright 2026 Paweł Zuzelski
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

# Maildir filenames contain colons ':' and commas ',' (e.g. file:2,S),
# which are incompatible with Bazel label syntax and cause analysis errors.
# Therefore, raw emails are accessed directly by the local genrule
# instead of being globbed into srcs.
filegroup(
    name = "data_dir",
    srcs = ["manifest.txt"],
)
