load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")

java_library(
    name = "ingest_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["--release", "21"],
    deps = [
        "@maven//:jakarta_mail_jakarta_mail_api",
        "@maven//:org_eclipse_angus_angus_mail",
        "@maven//:org_jsoup_jsoup",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:info_picocli_picocli",
        "@maven//:com_google_guava_guava",
    ],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "ingest_pipeline",
    main_class = "ch.execve.elm.ingest.IngestPipeline",
    runtime_deps = [":ingest_lib"],
)

java_test(
    name = "email_parser_test",
    srcs = glob(["src/test/java/**/*.java"]),
    javacopts = ["--release", "21"],
    test_class = "ch.execve.elm.ingest.EmailParserTest",
    deps = [
        ":ingest_lib",
        "@maven//:junit_junit",
        "@maven//:jakarta_mail_jakarta_mail_api",
        "@maven//:org_eclipse_angus_angus_mail",
        "@maven//:com_google_guava_guava",
    ],
)
