# Copyright 2026 Paweł Zuzelski
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "ingest_lib",
    srcs = glob(["*.java"]),
    javacopts = ["--release", "21"],
    deps = [
        "@maven//:jakarta_mail_jakarta_mail_api",
        "@maven//:org_eclipse_angus_angus_mail",
        "@maven//:org_jsoup_jsoup",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:info_picocli_picocli",
        "@maven//:com_google_guava_guava",
    ],
    visibility = ["//visibility:public"],
)

java_binary(
    name = "ingest_pipeline",
    main_class = "ch.execve.elm.ingest.IngestPipeline",
    runtime_deps = [":ingest_lib"],
    visibility = ["//visibility:public"],
)
