# Copyright 2026 Paweł Zuzelski
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "serving_lib",
    srcs = glob(["*.java"]),
    javacopts = ["--release", "25"],
    deps = [
        "//java/ch/execve/elm/core:core_lib",
        "@maven//:jakarta_mail_jakarta_mail_api",
        "@maven//:org_eclipse_angus_angus_mail",
        "@maven//:info_picocli_picocli",
    ],
)

java_binary(
    name = "serving_server",
    main_class = "ch.execve.elm.serving.ElmServer",
    runtime_deps = [":serving_lib"],
    visibility = ["//visibility:public"],
)
